--- a/utils/requirements.txt
+++ b/utils/requirements.txt
@@ -1,20 +1,31 @@
+astroid==2.11.7
+autopep8==1.6.0
 beautifulsoup4==4.11.1
-black==22.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
+dill==0.3.5.1
 idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 mypy-extensions==0.4.3
 numpy==1.23.1
 pandas==1.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
 psycopg==3.0.16
+pycodestyle==2.9.1
+pylint==2.14.5
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
+toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.1
+Unidecode==1.3.4
 urllib3==1.26.11
+wrapt==1.14.1
